--- a/main.css
+++ b/main.css
@@ -11,6 +11,8 @@ body {
   color: white;
   padding: 1rem;
   height: 4rem;
+  border-radius: 5rem;
+  text-align: center;
 }
 .cards {
   max-width: 1200px;
