--- a/main.css
+++ b/main.css
@@ -21,7 +21,10 @@ body {
   border: 0;
 }
 .my--btn:hover {
-  border
+  background-color: white;
+  border: 2px solid yellow;
+  cursor: pointer;
+  color: black;
 }
 img {
   padding: 1rem;
