--- a/main.css
+++ b/main.css
@@ -73,11 +73,11 @@ img {
   padding: 20px;
   font-size: 20px;
   font-family: sans-serif;
-  color: #fff;
+  color: #080101;
 }
 
 .item--1 {
-  background-color: orangered;
+  background-color: rgb(14, 10, 230);
   /*grid-row-start: 2;
     grid-row-end: 3;
     grid-column-start: 2;
@@ -87,24 +87,24 @@ img {
 }
 
 .item--2 {
-  background-color: yellowgreen;
+  background-color: red;
   /* //grid-column: 2 / span 2; */
   grid-column: 1 / 2;
   /* //spans from 2 to end */
 }
 
 .item--3 {
-  background-color: blueviolet;
+  background-color: white;
   grid-row: 2 / 3;
   grid-column: 1 / 2;
 }
 
 .item--4 {
-  background-color: palevioletred;
+  background-color: yellow;
 }
 
 .item--5 {
-  background-color: royalblue;
+  background-color: rgb(101, 101, 175);
   /*grid-row: 1 / 2;
     grid-column: 3 / 4;*/
   grid-area: 1 / 3 / 2 / 4;
