--- a/main.css
+++ b/main.css
@@ -7,3 +7,30 @@
   color: yellow;
   height: 40rem;
 }
+#text {
+  border-radius: 10px;
+  background-color: rgb(155, 155, 168);
+  color: green;
+  font-size: 1.2rem;
+  font-family: "Courier New", Courier, monospace;
+  text-align: center;
+  padding: 3rem;
+}
+.rps {
+  text-align: center;
+  font-weight: bolder;
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: italic;
+  background-color: rgb(42, 165, 144);
+  margin: 5% 25%;
+  padding: 3rem;
+}
+.button-container {
+  display: flex;
+  justify-content: space-around;
+}
+button {
+  padding: 0.8rem;
+  background-color: yellowgreen;
+  border-radius: 10px;
+}
