--- a/main.css
+++ b/main.css
@@ -2,6 +2,14 @@
   color: red;
   background-color: green;
 }
+body {
+  background-color: red;
+}
+#juve {
+  background-image: url(./istockphoto-1364087370-170667a.webp);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 .textt {
   background-color: blue;
   color: yellow;
@@ -31,6 +39,27 @@
 }
 button {
   padding: 0.8rem;
-  background-color: yellowgreen;
+  background-color: rgb(34, 122, 53);
   border-radius: 10px;
+  color: white;
+}
+
+#positive {
+  color: green;
+}
+#negative {
+  color: red;
+}
+#count {
+  font-size: 14rem;
+  display: flex;
+  justify-content: center;
+  font-style: italic;
+  background: url(./istockphoto-1364087370-170667a.webp);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.buttons {
+  display: flex;
+  justify-content: space-around;
 }
