--- a/main.css
+++ b/main.css
@@ -62,6 +62,7 @@ p {
   border-radius: 4px;
   outline: none;
   border: none;
+  cursor: pointer;
 }
 button.add {
   background-color: var(--positive);
