javascript counter finished

--- a/main.css
+++ b/main.css
@@ -54,9 +54,14 @@ p {
   font-weight: 700;
   font-size: 4rem;
 }
+.buttons {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
 .buttons button {
   padding: 1rem;
-  margin: 0 1rem;
   font-size: 1.5rem;
   color: white;
   border-radius: 4px;
