--- a/main.css
+++ b/main.css
@@ -46,13 +46,13 @@ img {
   text-align: center;
 }
 .counter-div > * {
-  margin-bottom: 10%;
+  margin: 4%;
   text-align: center;
 }
-p {
+.count {
   text-align: center;
-  font-weight: 700;
-  font-size: 4rem;
+  font-weight: 900;
+  font-size: 6rem;
 }
 .buttons {
   display: flex;
