--- a/main.css
+++ b/main.css
@@ -7,8 +7,6 @@
   --color-sec: #db6400;
   --grey: #eee;
   --dark-grey: #222831;
-  --positive: #0ff586;
-  --negative: #e70909;
 }
 * {
   margin: 0;
@@ -32,50 +30,5 @@ img {
   max-width: 900px;
   margin: 0 auto;
   padding: 0 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-.counter-div {
-  color: var(--white);
-  background-color: var(--light-blue);
-  width: 50%;
-  height: 40vh;
-  border-radius: 4px;
-  text-align: center;
-}
-.counter-div > * {
-  margin: 4%;
-  text-align: center;
-}
-.count {
-  text-align: center;
-  font-weight: 900;
-  font-size: 6rem;
-}
-.buttons {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  gap: 1rem;
-}
-.buttons button {
-  padding: 1rem;
-  font-size: 1.5rem;
-  color: white;
-  border-radius: 4px;
-  outline: none;
-  border: none;
-  cursor: pointer;
-}
-button.add {
-  background-color: var(--positive);
-}
-button.subtract {
-  background-color: var(--negative);
-}
-button.reset {
-  background-color: var(--grey);
-  color: var(--black);
+  color: rebeccapurple;
 }
